<resources>
    <string name="app_name">Smart Wallet</string>
    <string name="Home_page">Trang chủ</string>
    <string name="chart">Biểu đồ</string>
    <string name="Report">Báo cáo</string>
    <string name="me">Tôi</string>
    <string name="slogan">Chi tiêu thông minh Tiết kiệm sáng suốt</string>
    <string name="viet_nam">Tiếng Việt</string>
    <string name="english">Tiếng Anh</string>
    <string name="get_started">Bắt đầu</string>
    <string name="title_login_google">Thông tin người dùng được bảo mật</string>
    <string name="login">Đăng nhập</string>
    <string name="income">Thu nhập</string>
    <string name="expenses">Chi phí</string>
    <string name="total_balance">Tổng số dư</string>
    <string name="cancel">Hủy</string>
    <string name="add">Thêm</string>
    <string name="eat_and_drink">Ăn uống</string>
    <string name="living_expenses">Sinh hoạt</string>
    <string name="transportation">Đi lại</string>
    <string name="clothing">Trang phục</string>
    <string name="entertainment">Hưởng thụ</string>
    <string name="children_expenses">Con cái</string>
    <string name="gifts_and_events">Hiếu hỉ</string>
    <string name="housing">Nhà cửa</string>
    <string name="healthcare">Sức khỏe</string>
    <string name="personal_expenses">Bản thân</string>
    <string name="other_expenses">Khác</string>
    <string name="salary">Lương</string>
    <string name="bonus">Thưởng</string>
    <string name="part_time_job">Làm thêm</string>
    <string name="business">Kinh doanh</string>
    <string name="investment">Đầu tư</string>
    <string name="gift">Được cho</string>
    <string name="interest">Tiền lãi</string>
    <string name="title">Thu Chi Thông Minh</string>
    <string name="sloganGoogle">Đăng nhập để đồng bộ dữ liệu trên nhiều thiết bị. Đồng thời trải nghiệm nhiều tính năng thú vị từ chúng tôi</string>
    <string name="morning">Chào buổi sáng,</string>
    <string name="noon">Chào buổi trưa,</string>
    <string name="afternoon">Chào buổi chiều,</string>
    <string name="night">Chào buổi tối,</string>
    <string name="login_with_google">Đăng nhập bằng Google</string>
    <string name="finished">Xong</string>
    <string name="hello">Xin chào</string>
    <string name="slogan_pending_jars">Chi tiêu theo kế hoạch củ thể giúp bạn tránh khỏi những khoản chi không cần thiết. Hãy tạo cho mình một kế hoạch chi tiêu rõ ràng sẽ giúp bạn tiết kiệm hơn.</string>
    <string name="monthly_expenditure_number">SỐ DỰ CHI THÁNG</string>
    <string name="enter_expenses">Nhập dự chi</string>
    <string name="vnd">VND</string>
    <string name="usd">USD</string>
    <string name="estimate">Dự chi</string>
    <string name="limit_to_spend">Hạn mức nên chi</string>
    <string name="date">Ngày</string>
    <string name="have_breakfast">Ăn sáng</string>
    <string name="having_lunch">Ăn trưa</string>
    <string name="have_dinner">Ăn tối</string>
    <string name="snack">Ăn vặt</string>
    <string name="party">Ăn nhậu</string>
    <string name="coffee">Cà phê</string>
    <string name="television">Truyền hình</string>
    <string name="internet">Mạng</string>
    <string name="water">Nước</string>
    <string name="electricity">Điện</string>
    <string name="phone">Điện thoại</string>
    <string name="market">Đi chợ</string>
    <string name="gas">Ga</string>
    <string name="fuel">Nhiên liệu</string>
    <string name="taxi">Taxi</string>
    <string name="car_insurance">Bảo hiểm xe</string>
    <string name="car_repair">Bảo dưỡng xe</string>
    <string name="tax_fees">Thuế phí</string>
    <string name="clothes">Quần áo</string>
    <string name="shoes">Giày dép</string>
    <string name="accessory">Phụ kiện</string>
    <string name="tourism">Du lịch</string>
    <string name="beautify">Làm đẹp</string>
    <string name="cosmetics">Mỹ phẩm</string>
    <string name="fun">Vui chơi</string>
    <string name="watch_a_movie">Xem phim</string>
    <string name="tuition">Học phí</string>
    <string name="school_tools">Dụng cụ học</string>
    <string name="milk_diapers">Bỉm sữa</string>
    <string name="eat_out">Ăn tiệm</string>
    <string name="skin">Trang phục</string>
    <string name="health">Sức khỏe</string>
    <string name="miscellaneous_expenses">Tiêu vặt</string>
    <string name="toy">Đồ chơi</string>
    <string name="donate">Biếu tặng</string>
    <string name="wedding">Cưới xin</string>
    <string name="funeral">Ma chay</string>
    <string name="visit">Thăm hỏi</string>
    <string name="charity">Từ thiện</string>
    <string name="shopping">Sắm đồ</string>
    <string name="fix">Sửa chữa</string>
    <string name="rent_a_house">Thuê nhà</string>
    <string name="house_help">Giúp việc</string>
    <string name="medical_examination">Khám bệnh</string>
    <string name="medication">Thuốc men</string>
    <string name="sports">Thể thao</string>
    <string name="insurance">Bảo hiểm</string>
    <string name="exchange">Giao lưu</string>
    <string name="study">Học tập</string>
    <string name="lending">Cho vay</string>
    <string name="invest">Đầu tư</string>
    <string name="trading">Khinh doanh</string>
    <string name="surcharge">Phụ phí</string>
</resources>