<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.user.LoginWithGoogleActivity">

    <com.example.thuchiapp.views.customs.CustomBackgroundView
        android:layout_width="match_parent"
        android:layout_height="200dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/title"/>

        <TextView
            android:id="@+id/slogan"
            android:layout_below="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:padding="20dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:text="@string/sloganGoogle"/>

        <ImageView
            android:id="@+id/imageTitle"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_below="@+id/slogan"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="-2dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/homepage" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_below="@+id/imageTitle"
            android:id="@+id/googleBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/shape_button"
            android:drawableStart="@drawable/google"
            android:padding="10dp"
            android:text="@string/login_with_google"
            android:textColor="@color/white" />

            <RelativeLayout
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/googleBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/slogan_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/green"
                    android:textSize="11sp"
                    android:text="@string/title_login_google"/>

            </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>