<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/light_green"
    tools:context=".views.OnboardingActivity">

    <ImageView
        android:id="@+id/background_onboarding"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/background_onboarding" />

    <TextView
        android:id="@+id/slogan"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/background_onboarding"
        android:layout_centerHorizontal="true"
        android:text="@string/slogan"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="38sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinnerOnboarding"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:popupBackground="@color/white"
        android:layout_below="@+id/slogan"
        android:layout_centerHorizontal="true"
        android:background="@drawable/spinner_border"/>

    <LinearLayout
        android:layout_below="@+id/spinnerOnboarding"
        android:id="@+id/btnStart"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/background_button"
        android:gravity="center"
        android:orientation="horizontal"
        android:elevation="16dp"
        tools:ignore="UselessParent">


        <TextView
            android:id="@+id/textBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_started"
            android:textColor="@color/white"
            android:textSize="24sp" />

    </LinearLayout>




</RelativeLayout>