<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/titleBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/backBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:layout_marginStart="10dp"
                    android:text="@string/cancel"
                    android:textSize="20sp"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/add"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    tools:ignore="RelativeOverlap" />

<!--                <ImageButton-->
<!--                    android:id="@+id/monthlyPayment"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_alignParentEnd="true"-->
<!--                    android:layout_centerVertical="true"-->
<!--                    android:layout_marginEnd="10dp"-->
<!--                    android:background="@android:color/transparent"-->
<!--                    android:padding="10dp"-->
<!--                    android:src="@drawable/ic_time_limit_24" />-->

            </RelativeLayout>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/titleSubAAE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleBackground"
            android:layout_margin="20dp"
            android:orientation="horizontal"
            android:weightSum="2">


            <TextView
                android:background="@drawable/round_back_white_left"
                android:id="@+id/tabExpense"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/expenses" />

            <TextView
                android:background="@drawable/round_back_white_right"
                android:id="@+id/tabIncome"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/income" />

        </LinearLayout>

    </RelativeLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPagerTv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>

